fix: upgrade SQL sample to new Kinesis connector, fix DDL parsing, add SinkV2 for local
- Switch from kinesis-legacy to kinesis connector (flink-sql-connector-aws-kinesis-streams 6.0.0-2.0)
- Use stream.arn instead of stream name for new connector
- Fix trailing comma in Iceberg table DDLs when not in upsert mode
- Remove inline SQL comments that broke Flink SQL parser
- Enable SinkV2 for local execution to avoid Kryo/Java 17 checkpoint issues
- Add IntelliJ run configurations with --add-opens JVM flags
- Add run-local.sh script for CLI execution
- Update CDK to pass kinesis.stream.arn for SQL app type
- Upgrade CDK CLI to 2.1111.0 for schema compatibility